--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				本导航主要用于教授Survivalcraft Mod的制作方法，提供相关资源，以及介绍SMT组，欢迎任何人加入<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=ff7d30bde77e41883745af6608e898c34b5fd5509e3d63fb7a1aa97425709657">QQ群-SC MOD交流群(SMT)</a>（群号302758716）交流mod！<br />
 			</div>
 			<div class="content">
-				网页开发者：百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=lzm956902416&ie=utf-8" target="_blank">lzm956902416</a>
+				网站开发者：百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=lzm956902416&ie=utf-8" target="_blank">lzm956902416</a>
 				<script>if(String(document.location.href).indexOf("survivalcraft.cn") >= 0)document.write("，同时也是本在线版服务器提供者")</script><br />
 			</div>
 		</div>
@@ -80,7 +80,7 @@
 				<script>if (ver == version) $("#current_version").html(version);</script>
 			</div>
 			<div class="content">
-			本版本更新日期 2016年？月？日<br />
+			本版本更新日期 2016年2月6日<br />
 			本版本mod教程对应Survivalcraft 1.29
 			</div>
 		</div>
