--- a/nav_update.html
+++ b/nav_update.html
@@ -65,13 +65,12 @@
 		<div class="chapter">
 			<h1>2.7.7.12</h1>
 			<div class="content">
-				更新日期：2016年?月?日<br />
+				更新日期：2016年2月6日<br />
 				<ol>
 					<li>网页体验全面优化，完美流畅</li>
-					<li>侧边栏进一步Material Design化，章节可展开缩起</li>
-					<li>pc版网页加入渐显、渐隐特效</li>
-					<li>加入代码高亮，使示例代码看起来不再困难</li>
-					<li>首页增加网页开发者ID</li>
+					<li>侧边栏进一步Material Design化，章节可展开收起</li>
+					<li>电脑端网页加入渐显、渐隐特效</li>
+					<li>加入代码高亮，示例代码看起来不再困难</li>
 					<li>“源代码”教程正式上线</li>
 					<li>第四章增加发布范例</li>
 					<li>资源下载整合增加安卓版pak处理器，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！还增加了apktool以及SCPacker的第二代——scpak。源代码相关工具已正式上线</li>
