--- a/members.html
+++ b/members.html
@@ -32,7 +32,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div">SMT组员</div>
-	<div id="last_update">——更新日期 2016年1月22日——</div>
+	<div id="last_update">——更新日期 2016年2月18日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -183,6 +183,13 @@
 						<td>2003/6/2</td>
 						<td>活跃</td>
 						<td>暂无</td>
+					</tr>
+					<tr>
+						<td>梦里雨里8</td>
+						<td>组员</td>
+						<td>1999/3/16</td>
+						<td>活跃</td>
+						<td>恶魔岛屿mod</td>
 					</tr>
 				</table>
 			</div>
